fix: hot fix, add text-align: justify for blocks services and get-quote

--- a/style.css
+++ b/style.css
@@ -229,8 +229,8 @@ button {
   margin-bottom: 43px;
   font-size: 18px;
   font-weight: 300;
+  text-align: justify;
   line-height: 30px;
-  letter-spacing: -0.003em;
 }
 
 .services__list {
@@ -299,7 +299,7 @@ button {
   padding: 0;
   margin: 0;
   line-height: 22px;
-  letter-spacing: 0.02em;
+  text-align: justify;
 }
 
 .portfolio {
@@ -394,8 +394,8 @@ button {
   margin-bottom: 45px;
   font-size: 18px;
   font-weight: 300;
+  text-align: justify;
   line-height: 30px;
-  letter-spacing: -0.003em;
 }
 
 .team {
@@ -430,6 +430,7 @@ button {
   margin: 0;
   margin-bottom: 24px;
   line-height: 21px;
+  text-align: justify;
 }
 
 .socials {
@@ -499,8 +500,8 @@ button {
   padding: 0;
   font-size: 18px;
   font-weight: 300;
+  text-align: justify;
   line-height: 30px;
-  letter-spacing: -0.002em;
 }
 
 .get-quote__wrapper {
